# sabot

./: Dockerfile  README.md  pyproject.toml  requirements.txt
src/sabot/: bot.py  jira.py
